# eventfusion

./: 3D_PointCloud_Fusion.py  Calibration.py  Event_RGB_Fusion_Threading.py  Event_RGB_Pointcloud.py  Event_Vector_read.py  Getting Extrinsic and Intrinsic  Optris_Realsense_Calibration.py  Point_Cloud_Threading.py  RGB_T_E_Pointcloud.py  RGB_T_Enhanced.py  RGB_T_Fusion.py  RGB_T_Fusion_No threading.py  Timesurface_1.0.py
Event_Vector/: Backup.cpp  CMakeLists.txt  main.cpp
Fusion/: Backup.cpp  CMakeLists.txt  Try.cpp  event_code.cpp  main.cpp  optris_code.cpp  realsense_code.cpp
Fusion/calib/: event_realsense_RGB_distortion.xml  event_realsense_event_distortion.xml  event_realsense_event_intrinsic.xml  optris_rs_RGB_intrinsic.xml  optris_rs_Thermal_intrinsic.xml
Fusion/include/: dependencies.h
Fusion_PointCloud/: 22092003.xml  CMakeLists.txt  main.cpp
Fusion_PointCloud/calib/: event_realsense_RGB_intrinsic.xml  event_rgb_Relative_rotation_matrix.xml  event_rgb_Relative_translation_matrix.xml  optris_rs_RGB_distortion.xml  optris_rs_Ralative_rotation_matrix.xml  optris_rs_Ralative_translation_matrix.xml  optris_rs_Thermal_distortion.xml
Fusion_PointCloud/include/: Fusion_Pointcloud.h  rsd455.h
